added Search functionality in customer list page

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -63,6 +63,13 @@ $font-style: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   padding-left: 0 !important;
 }
 
+.searchbar-md .searchbar-input{
+  padding: 6px !important;
+}
+.searchbar-search-icon{
+  display: none !important;
+}
+
       .item-md.item-block .item-inner
       {
         padding-right: 16px !important;
