--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,23 @@
-<ion-nav [root]="rootPage" ></ion-nav>
+<ion-menu side="right" [content]="content">
+    <ion-header>
+        <ion-toolbar color="primary">
+            <ion-row>
+                <ion-col></ion-col>
+                <ion-col>
+                    <img src="assets/Sewing_machine_white.png">
+                </ion-col>
+                <ion-col></ion-col>
+            </ion-row>
+            <ion-title>Menu</ion-title>
+        </ion-toolbar>
+    </ion-header>
+    <ion-content style="background: #F5F5F6">
+        <ion-list>
+            <button style="background: #F5F5F6" menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+                    <ion-icon ios="ios-{{p.icon}}" md="md-{{p.icon}}"></ion-icon>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{p.title}}
+            </button>
+        </ion-list>
+    </ion-content>
+</ion-menu>
+
+<ion-nav id="nav" #content [root]="rootPage" swipeBackEnabled="false"></ion-nav>
