--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -125,3 +125,34 @@ $font-style: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   height: 1.0rem;
   display: block
 }
+
+.profile-div{
+  width: 60%;
+  z-index: 10;
+  position: relative;
+  margin-top: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 50%;
+}
+
+.profile-img-div{
+  background: white;
+  padding: 3%;
+  padding-bottom: 0;
+  border-radius: 50%;
+  margin-top: auto;
+  margin-bottom: auto;
+  box-shadow:0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+
+.profile-img{
+  border-radius: 50%;
+  margin-top: 1%
+}
+
+.camareIcon{
+  float: right;
+  margin-top: -15%;
+  opacity: .9;
+}
