--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -67,7 +67,8 @@ $colors: (
   primaryLightColor: #ff7961,
   primaryDarkColor:#ba000d,
   primaryTextColor:#404040,
-  secondaryTextColor:#CCCCCC
+  secondaryTextColor:#CCCCCC,
+  backgroundColor:#E1E2E1
 );
 
 
